--- a/indes.html
+++ b/indes.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>CRUD Example</h1>
+        <h1>CRUD Exemplo</h1>
         <div id="output"></div>
         <form id="crudForm">
-          <label for="itemName">Item Name:</label>
+          <label for="itemName">Nome do item:</label>
           <input type="text" id="itemName" required>
           <button type="button" onclick="addItem()">Add Item</button>
         </form>
